implementação de esqueci minha senha e recebimento de e-mails na criação do remédio

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
 </head>
 
 <body class="hold-transition skin-blue-light layout-top-nav">
 
-    <gmr-app>Loading...</gmr-app>
+    <gmr-app> <h3>Aguarde um instante enquanto a página é carregada ...</h3> </gmr-app>
 
 </body>
 </html>
